# spotlight-renderer

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build.bat  imgui.ini  run.bat  run_debug.bat  run_release.bat  vcpkg.json
.gemini/: settings.json
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml  release.yml
data/fixtures/: Martin_Professional@MAC_Viper_Performance@20230516NoMeas.gdtf
data/models/: stage.mtl
scripts/: lint.ps1  lint.py
shaders/: basic.hlsl  blur.hlsl  composite.hlsl  debug.hlsl  fxaa.hlsl  shadow.hlsl  volumetric.hlsl
src/: Application.cpp  Application.h  ConstantBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  main.cpp
src/Core/: Config.h  ConstantBuffer.h  GraphicsDevice.cpp  GraphicsDevice.h
src/GDTF/: GDTFLoader.cpp  GDTFLoader.h  GDTFParser.cpp  GDTFParser.h  ModelLoader.cpp  ModelLoader.h
src/Geometry/: GeometryGenerator.cpp  GeometryGenerator.h
src/Rendering/: RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h
src/Rendering/Passes/: BlurPass.cpp  BlurPass.h  CompositePass.cpp  CompositePass.h  FXAAPass.cpp  FXAAPass.h  IRenderPass.h  ScenePass.cpp  ScenePass.h  ShadowPass.cpp  ShadowPass.h  VolumetricPass.cpp  VolumetricPass.h
src/Resources/: GDTFLoader.cpp  GDTFLoader.h  GDTFParser.cpp  GDTFParser.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Scene/: Camera.cpp  Camera.h  CeilingLights.cpp  CeilingLights.h  EffectsEngine.cpp  EffectsEngine.h  MeshNode.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Spotlight.cpp  Spotlight.h
src/UI/: UIRenderer.cpp  UIRenderer.h
tests/: test_ray_math.cpp  test_scene_graph.cpp  test_spotlight_nodes.cpp  test_temporal_reconstruction.cpp  test_volumetric_jitter.cpp  verify_build.ps1
